<resources>
    <string name="app_name">SmartCooking</string>
    <string name="dashboard_home">Início</string>
    <string name="dashboard_search">Pesquisa</string>
    <string name="dashboard_categories">Categorias</string>
    <string name="dashboard_favorites">Favoritos</string>
    <string name="dashboard_about">Sobre nós</string>
    <string name="meat_btn">carne</string>
    <string name="fish_btn">peixe</string>
    <string name="vegan_btn">vegetariano</string>
    <string name="dessert_btn">sobremesa</string>
    <string name="snacks_btn">snacks</string>
    <string name="other_btn">outros</string>
    <string name="search">pesquisa</string>
    <string name="search_hint">Insira o nome da receita</string>
    <string name="search_btn_text">procurar</string>
    <string name="addIngr_btn">Mais Ingredientes</string>
    <string name="removeIngr_btn">Menos Ingredientes</string>
    <string name="ingr_prompt">Escolha um ingrediente</string>
    <string name="max_ingr">Número máximo de ingredientes atingido!</string>
    <string name="novo_ingr">Novo ingrediente adicionado</string>
    <string name="del_ingr">Ingrediente removido</string>
    <string name="min_ingr">Número mínimo de ingredientes !</string>
    <string name="tempo_label">Tempo:</string>
    <string name="dif_label">Dificuldade:</string>
    <string name="fornecedor_label">Fornecedor:</string>
    <string name="ingredients_title">ingredientes:</string>
    <string name="preparation_title">preparação:</string>
    <string name="aboutus_title">acerca de nós</string>
    <string name="partners_title">parceiros</string>
    <string name="others_title">outro:</string>
    <string name="aboutus_text">A equipa que criou a SmartCooking é composta por 6 estudantes de Engenharia Informática da Universidade de Coimbra. Esta equipa tinha em mente criar uma aplicação que combata as dificuldades na escolha de receitas com os ingredientes disponíveis em casa.\n\tO objetivo da SmartCooking é ajudar todos os estudantes e todas as pessoas com dificuldades na escolha do que fazer para comer.\nBom apetite!</string>
    <string name="partners_text">Visitem as páginas dos nossos parceiros:</string>
    <string name="facebook_text">Facebook: </string>
    <string name="twitter_text">Twitter: </string>
    <string name="icons_text">Icons feitos por: </string>
    <string name="un_fav">não\nfavorito</string>
    <string-array name="ingr_array">
        <item>Selecione um ingrediente</item>
        <item>Abóbora</item>
        <item>Açúcar</item>
        <item>Açúcar Mascavado</item>
        <item>Alface</item>
        <item>Alheira</item>
        <item>Alho francês</item>
        <item>Amêijoas</item>
        <item>Amêndoas</item>
        <item>Ananás</item>
        <item>Arroz</item>
        <item>Atum</item>
        <item>Bacalhau</item>
        <item>Bacon</item>
        <item>Batata</item>
        <item>Bifanas</item>
        <item>Bifes de Peru</item>
        <item>Bolachas Maria</item>
        <item>Bróculos</item>
        <item>Cacau</item>
        <item>Café</item>
        <item>Caldo de Galinha</item>
        <item>Camarão inteiro</item>
        <item>Carne</item>
        <item>Carne Picada</item>
        <item>Castanhas</item>
        <item>Cebola</item>
        <item>Cenoura</item>
        <item>Chocolate</item>
        <item>Chocolate em pó</item>
        <item>Chouriço de carne</item>
        <item>Claras de ovos</item>
        <item>Cogumelos</item>
        <item>Costeletas de porco</item>
        <item>Courgette</item>
        <item>Coxas de frango</item>
        <item>Delícias do mar</item>
        <item>Ervilhas</item>
        <item>Esparguete</item>
        <item>Farinha</item>
        <item>Farinha Maizena</item>
        <item>Feijão</item>
        <item>Feijão verde</item>
        <item>Fermento</item>
        <item>Fiambre</item>
        <item>Filetes</item>
        <item>Frango</item>
        <item>Gambas</item>
        <item>Ketchup</item>
        <item>Legumes</item>
        <item>Leite</item>
        <item>Louro</item>
        <item>Maçã</item>
        <item>Manjericão</item>
        <item>Manteiga</item>
        <item>Manteiga de alho</item>
        <item>Margarina</item>
        <item>Massa cotovelinhos</item>
        <item>Massa de pão</item>
        <item>Massa folhada</item>
        <item>Massa macarrão</item>
        <item>Milho</item>
        <item>Miolo de camarão</item>
        <item>Mostarda</item>
        <item>Natas</item>
        <item>Nozes</item>
        <item>Óleo</item>
        <item>Oregãos</item>
        <item>Ovos</item>
        <item>Pão</item>
        <item>Pão ralado</item>
        <item>Passas</item>
        <item>Peixe</item>
        <item>Pepino</item>
        <item>Pimento verde</item>
        <item>Pimento vermelho</item>
        <item>PiriPiri</item>
        <item>Polpa de tomate</item>
        <item>Porco</item>
        <item>Presunto</item>
        <item>Queijo</item>
        <item>Queijo Amanteigado</item>
        <item>Queijo de cabra</item>
        <item>Queijo Fresco</item>
        <item>Queijo Ralado</item>
        <item>Queijo Mozzarella</item>
        <item>Queijo Parmesao</item>
        <item>Rúcula</item>
        <item>Salada</item>
        <item>Salmão</item>
        <item>Salsa</item>
        <item>Salsicha</item>
        <item>Sumo de limão</item>
        <item>Vitela</item>
    </string-array>
    <string name="image_list_description">Image of the Receipe in List</string>
    <string name="recipe_image_description">Image of the Recipe</string>
    <string name="details_difficulty_image_content">Details Difficulty</string>
    <string name="details_time_image_content">Details Time</string>
    <string name="remove_btn_1_image_content">Remove Button 1</string>
    <string name="remove_btn_2_image_content">Remove Button 2</string>
    <string name="remove_btn_3_image_content">Remove Button 3</string>
    <string name="remove_btn_4_image_content">Remove Button 4</string>
    <string name="remove_btn_5_image_content">Remove Button 5</string>
    <string name="add_btn_image_content">Add Ingredient Button</string>
    <string name="meat_btn_image_content">Meat Button Icon</string>
    <string name="fish_btn_image_content">Fish Button Icon</string>
    <string name="vegan_btn_image_content">Vegan Button Icon</string>
    <string name="dessert_btn_image_content">Desert Button Icon</string>
    <string name="snack_btn_image_content">Snack Button Icon</string>
    <string name="other_btn_image_content">Other Button Icon</string>
    <string name="recipe_details_image_content">Recipe Details Image</string>
    <string name="recipe_image_preview_image_content">Image View for the recipe preview</string>
    <string name="swipe_icon_image_content">Icon in the backgroud of the swipe</string>
</resources>