<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="2">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/meat_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/button1"
                android:fontFeatureSettings="smcp"
                android:gravity="bottom|center_horizontal"
                android:paddingBottom="@dimen/category_button_padding"
                android:text="@string/meat_btn"
                android:textColor="@color/white"
                android:textSize="@dimen/category_text_size" />

            <ImageView
                android:layout_width="@dimen/button_image_size"
                android:layout_height="@dimen/button_image_size"
                android:layout_centerInParent="true"
                android:contentDescription="@string/meat_btn_image_content"
                app:srcCompat="@drawable/meat" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/fish_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/button2"
                android:fontFeatureSettings="smcp"
                android:gravity="bottom|center_horizontal"
                android:paddingBottom="@dimen/category_button_padding"
                android:text="@string/fish_btn"
                android:textColor="@color/white"
                android:textSize="@dimen/category_text_size" />

            <ImageView
                android:layout_width="@dimen/button_image_size"
                android:layout_height="@dimen/button_image_size"
                android:layout_centerInParent="true"
                android:contentDescription="@string/fish_btn_image_content"
                app:srcCompat="@drawable/fish" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="2">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/vegan_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/button3"
                android:fontFeatureSettings="smcp"
                android:gravity="bottom|center_horizontal"
                android:paddingBottom="@dimen/category_button_padding"
                android:text="@string/vegan_btn"
                android:textColor="@color/white"
                android:textSize="@dimen/category_text_size" />

            <ImageView
                android:layout_width="@dimen/button_image_size"
                android:layout_height="@dimen/button_image_size"
                android:layout_centerInParent="true"
                android:contentDescription="@string/vegan_btn_image_content"
                app:srcCompat="@drawable/vegan" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/dessert_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/button4"
                android:fontFeatureSettings="smcp"
                android:gravity="bottom|center_horizontal"
                android:paddingBottom="@dimen/category_button_padding"
                android:text="@string/dessert_btn"
                android:textColor="@color/white"
                android:textSize="@dimen/category_text_size" />

            <ImageView
                android:layout_width="@dimen/button_image_size"
                android:layout_height="@dimen/button_image_size"
                android:layout_centerInParent="true"
                android:contentDescription="@string/dessert_btn_image_content"
                app:srcCompat="@drawable/dessert" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="2">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/snack_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/button5"
                android:fontFeatureSettings="smcp"
                android:gravity="bottom|center_horizontal"
                android:paddingBottom="@dimen/category_button_padding"
                android:text="@string/snacks_btn"
                android:textColor="@color/white"
                android:textSize="@dimen/category_text_size" />

            <ImageView
                android:layout_width="@dimen/button_image_size"
                android:layout_height="@dimen/button_image_size"
                android:layout_centerInParent="true"
                android:contentDescription="@string/snack_btn_image_content"
                app:srcCompat="@drawable/snack" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/other_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/button6"
                android:fontFeatureSettings="smcp"
                android:gravity="bottom|center_horizontal"
                android:paddingBottom="@dimen/category_button_padding"
                android:text="@string/other_btn"
                android:textColor="@color/white"
                android:textSize="@dimen/category_text_size" />

            <ImageView
                android:layout_width="@dimen/button_image_size"
                android:layout_height="@dimen/button_image_size"
                android:layout_centerInParent="true"
                android:contentDescription="@string/other_btn_image_content"
                app:srcCompat="@drawable/other" />

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>